--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,8 @@
         "cfenv": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "regex": "cpp"
     },
     "python.autoComplete.extraPaths": [
         "/home/dovejh/tools/livox_ros_driver2/install/livox_ros_driver2/local/lib/python3.10/dist-packages",
