--- a/camera_driver/yaml/camera.yaml
+++ b/camera_driver/yaml/camera.yaml
@@ -16,7 +16,10 @@ camera1: #与命名空间对应，使用的命名空间决定了读入的参数
       camera_auto_maxgain: 17.0 #自动增益的最大值
       camera_auto_mingain: 0.0 #自动增益的最小值
       camera_auto_whitebalance: 0 #是否使用自动白平衡 0:关闭 1:单次 2:连续
-      
+      camera_matrix: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] #相机内参K
+      camera_distortion: [0.0, 0.0, 0.0, 0.0, 0.0] #相机畸变参数D
+      camera_rectification: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] #相机矫正参数R
+      camera_projection: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0] #相机投影参数，用于将相机坐标系下的点投影到图像坐标系，包含了内参和外参信息P
 camera2: #与命名空间对应，使用的命名空间决定了读入的参数
   camera_driver_node:
     ros__parameters:
