--- a/camera_driver/yaml/camera.yaml
+++ b/camera_driver/yaml/camera.yaml
@@ -1,44 +1,44 @@
-camera1: #与命名空间对应，使用的命名空间决定了读入的参数
+camera1:
   camera_driver_node:
     ros__parameters:
-      camera_name: camera1 #相机名称，用于区分不同相机，从相机客户端中修改
-      camera_height: 1080 #使用裁剪实现的，数值大小会影响相机视野
-      camera_width: 1440 #使用裁剪实现的，数值大小会影响相机视野
-      camera_exp: 2000.0 #曝光时间，曝光时间与帧率尽量匹配
-      camera_gain: 15.0 #增益，增益越大，图像越亮，但噪点越明显、动态范围越小，应该在亮度允许的条件下尽量小
-      camera_framerate: 200 #帧率，帧率与曝光时间尽量匹配
-      camera_roi_offset_x: 0 #裁剪图像的偏移量
-      camera_roi_offset_y: 0 #裁剪图像的偏移量
-      camera_auto_exp: 0 #是否使用自动曝光 0:关闭 1:单次 2:连续
-      camera_auto_maxexp: 4500 #自动曝光的最大值
-      camera_auto_minexp: 100 #自动曝光的最小值
-      camera_auto_gain: 0 #是否使用自动增益 0:关闭 1:单次 2:连续
-      camera_auto_maxgain: 17.0 #自动增益的最大值
-      camera_auto_mingain: 0.0 #自动增益的最小值
-      camera_auto_whitebalance: 0 #是否使用自动白平衡 0:关闭 1:单次 2:连续
-      camera_matrix: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] #相机内参K
-      camera_distortion: [0.0, 0.0, 0.0, 0.0, 0.0] #相机畸变参数D
-      camera_rectification: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] #相机矫正参数R
-      camera_projection: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0] #相机投影参数，用于将相机坐标系下的点投影到图像坐标系，包含了内参和外参信息P
-camera2: #与命名空间对应，使用的命名空间决定了读入的参数
+      camera_name: camera1
+      camera_height: 1080
+      camera_width: 1440
+      camera_exp: 2000.0
+      camera_gain: 15.0
+      camera_framerate: 200
+      camera_roi_offset_x: 0
+      camera_roi_offset_y: 0
+      camera_auto_exp: 0
+      camera_auto_maxexp: 4500
+      camera_auto_minexp: 100
+      camera_auto_gain: 0
+      camera_auto_maxgain: 17.0
+      camera_auto_mingain: 0.0
+      camera_auto_whitebalance: 0
+      camera_matrix: [1549.8015577176407, 0.0, 774.50694325965446, 0.0, 1546.0969313119535, 353.35181301418544, 0.0, 0.0, 1.0]
+      camera_distortion: [0.1405344646814807, -0.8867151879475168, -0.012452148491565052, 0.004768478116866451, 0.0]
+      camera_rectification: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
+      camera_projection: [1524.743408203125, 0.0, 787.72717800308601, 0.0, 0.0, 1555.3603515625, 349.04974594277155, 0.0, 0.0, 0.0, 1.0, 0.0]
+camera2:
   camera_driver_node:
     ros__parameters:
-      camera_name: camera2 #相机名称，用于区分不同相机，从相机客户端中修改
-      camera_height: 1080 #使用裁剪实现的，数值大小会影响相机视野
-      camera_width: 1440 #使用裁剪实现的，数值大小会影响相机视野
-      camera_exp: 4500.0 #曝光时间，曝光时间与帧率尽量匹配
-      camera_gain: 15.0 #增益，增益越大，图像越亮，但噪点越明显、动态范围越小，应该在亮度允许的条件下尽量小
-      camera_framerate: 200 #帧率，帧率与曝光时间尽量匹配
-      camera_roi_offset_x: 0 #裁剪图像的偏移量
-      camera_roi_offset_y: 0 #裁剪图像的偏移量
-      camera_auto_exp: 0 #是否使用自动曝光 0:关闭 1:单次 2:连续
-      camera_auto_maxexp: 4500 #自动曝光的最大值
-      camera_auto_minexp: 100 #自动曝光的最小值
-      camera_auto_gain: 0 #是否使用自动增益 0:关闭 1:单次 2:连续
-      camera_auto_maxgain: 17.0 #自动增益的最大值
-      camera_auto_mingain: 0.0 #自动增益的最小值
-      camera_auto_whitebalance: 0 #是否使用自动白平衡 0:关闭 1:单次 2:连续
-      camera_matrix: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] #相机内参K
-      camera_distortion: [0.0, 0.0, 0.0, 0.0, 0.0] #相机畸变参数D
-      camera_rectification: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] #相机矫正参数R
-      camera_projection: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0] #相机投影参数，用于将相机坐标系下的点投影到图像坐标系，包含了内参和外参信息P
+      camera_name: camera2
+      camera_height: 1080
+      camera_width: 1440
+      camera_exp: 4500.0
+      camera_gain: 15.0
+      camera_framerate: 200
+      camera_roi_offset_x: 0
+      camera_roi_offset_y: 0
+      camera_auto_exp: 0
+      camera_auto_maxexp: 4500
+      camera_auto_minexp: 100
+      camera_auto_gain: 0
+      camera_auto_maxgain: 17.0
+      camera_auto_mingain: 0.0
+      camera_auto_whitebalance: 0
+      camera_matrix: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
+      camera_distortion: [0.0, 0.0, 0.0, 0.0, 0.0]
+      camera_rectification: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
+      camera_projection: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0]
